2021-22 board team page

--- a/src/index.html
+++ b/src/index.html
@@ -285,33 +285,33 @@
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>President</h4>
-                            <img class="img-fluid rounded-circle" src="<%=require('./images/sasankh.jpg')%>" alt="Photograph of Sasankh Munukutla">
-                            <p class="pb_font-15 mt-3 mb-0">Sasankh Munukutla</p>
-                          <p class="pb_font-15"><a href="mailto:sasankh@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sasankh/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                            <img class="img-fluid rounded-circle" src="<%=require('./images/andy.jpg')%>" alt="Photograph of Andy Jin">
+                            <p class="pb_font-15 mt-3 mb-0">Andy Jin</p>
+                          <p class="pb_font-15"><a href="mailto:andyjin@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/andygjin/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
 						</div>
 					</div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Vice President</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/stone.jpg')%>" alt="Photograph of Stone Yang">
-              <p class="pb_font-15 mt-3 mb-0">Stone Yang</p>
-              <p class="pb_font-15"><a href="mailto:yywstone@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/stone-yuwei-yang-70023b173/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/ananya.jpg')%>" alt="Photograph of Ananya Karthik">
+              <p class="pb_font-15 mt-3 mb-0">Ananya Karthik</p>
+              <p class="pb_font-15"><a href="mailto:ananya23@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ananya-karthik-668618193/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Financial Officer</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/andy.jpg')%>" alt="Photograph of Andy Jin">
-              <p class="pb_font-15 mt-3 mb-0">Andy Jin</p>
-              <p class="pb_font-15"><a href="mailto:andyjin@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/andygjin/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/senem.jpg')%>" alt="Photograph of Senem Isik">
+              <p class="pb_font-15 mt-3 mb-0">Senem Isik</p>
+              <p class="pb_font-15"><a href="mailto:senemi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>Social Chair</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/penny.jpg')%>" alt="Photograph of Penny Shi">
-							<p class="pb_font-15 mt-3 mb-0">Penny Shi</p>
-                          <p class="pb_font-15"><a href="mailto:pennyshi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shipenny/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+							<img class="img-fluid rounded-circle" src="<%=require('./images/mona.jpg')%>" alt="Photograph of Mona Anvari">
+							<p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
+                          <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
                         </div>
 					</div>
 				</div>
@@ -319,9 +319,17 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/shubhang.jpg')%>" alt="Photograph of Shubhang Desai">
-              <p class="pb_font-15 mt-3 mb-0">Shubhang Desai</p>
-              <p class="pb_font-15"><a href="mailto:shubhang@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shubhangd/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/matthewr.jpg')%>" alt="Photograph of Matthew Radovan">
+              <p class="pb_font-15 mt-3 mb-0">Matthew Radovan</p>
+              <p class="pb_font-15"><a href="mailto:mradovan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shubhangd/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+	  <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">AI+Social Good</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/mona.jpg')%>" alt="Photograph of Mona Anvari">
+              <p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
+              <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
@@ -335,17 +343,17 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Discussions</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/ananya.jpg')%>" alt="Photograph of Ananya Karthik">
-              <p class="pb_font-15 mt-3 mb-0">Ananya Karthik</p>
-              <p class="pb_font-15"><a href="mailto:ananya23@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ananya-karthik-668618193" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/yousif.jpg')%>" alt="Photograph of Yousif Mohsen">
+              <p class="pb_font-15 mt-3 mb-0">Yousif Mohsen</p>
+              <p class="pb_font-15"><a href="mailto:yousifm@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/yousif-mohsen-7020411a5" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Discussions</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/poojit.jpg')%>" alt="Photograph of Poojit Hegde">
-              <p class="pb_font-15 mt-3 mb-0">Poojit Hegde</p>
-              <p class="pb_font-15"><a href="mailto:phegde8@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/phalpha/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/liz.jpg')%>" alt="Photograph of Liz Song">
+              <p class="pb_font-15 mt-3 mb-0">Liz Song</p>
+              <p class="pb_font-15"><a href="mailto:lizsong@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/phalpha/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
         </div>
@@ -353,17 +361,17 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Fellowships</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/julia.jpg')%>" alt="Photograph of Julia Meltzer">
-              <p class="pb_font-15 mt-3 mb-0">Julia Meltzer</p>
-              <p class="pb_font-15"><a href="mailto:jnmeltzer@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/julia-meltzer-45545a173" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/jessica.jpg')%>" alt="Photograph of Jessica Yu">
+              <p class="pb_font-15 mt-3 mb-0">Jessica Yu</p>
+              <p class="pb_font-15"><a href="mailto:jmyu@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jessica-m-yu" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Fellowships</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/jessica.jpg')%>" alt="Photograph of Jessica Yu">
-              <p class="pb_font-15 mt-3 mb-0">Jessica Yu</p>
-              <p class="pb_font-15"><a href="mailto:jmyu@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jessica-m-yu" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/olivia.jpg')%>" alt="Photograph of Olivia Lee">
+              <p class="pb_font-15 mt-3 mb-0">Olivia Lee</p>
+              <p class="pb_font-15"><a href="mailto:oliviayl@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/oliviaylee/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
@@ -377,9 +385,9 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>CS106S</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/cooper.jpg')%>" alt="Photograph of Cooper deNicola">
-              <p class="pb_font-15 mt-3 mb-0">Cooper deNicola</p>
-              <p class="pb_font-15"><a href="mailto:cdenicol@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/cooperdenicola/" target="_blank"><i class="fa fa-linkedin"></i></a></p></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/miles.jpg')%>" alt="Photograph of Miles McCain">
+              <p class="pb_font-15 mt-3 mb-0">Miles McCain</p>
+              <p class="pb_font-15"><a href="mailto:mccain@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/r-miles-mccain-a215b1199/" target="_blank"><i class="fa fa-linkedin"></i></a></p></p>
             </div>
           </div>
         </div>
@@ -387,33 +395,41 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Education</br> Outreach</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/shelly.jpg')%>" alt="Photograph of Shelly Goel">
-              <p class="pb_font-15 mt-3 mb-0">Shelly Goel</p>
-              <p class="pb_font-15"><a href="mailto:shelly23@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shelly-goel-2023/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/anna.jpg')%>" alt="Photograph of Anna Hudson">
+              <p class="pb_font-15 mt-3 mb-0">Anna Hudson</p>
+              <p class="pb_font-15"><a href="mailto:afhudson@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/anna-hudson-5134061a6/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
               <div class="pb_pricing_v1 p-5 border text-center bg-white">
                   <h4 class="mb-3">Impact<br/>Lab</h4>
-                  <img class="img-fluid rounded-circle" src="<%=require('./images/raymond.jpg')%>" alt="Photograph of Raymond Yao">
-                  <p class="pb_font-15 mt-3 mb-0">Raymond Yao</p>
-                  <p class="pb_font-15"><a href="mailto:ryao28@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/yaoraymond/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                  <img class="img-fluid rounded-circle" src="<%=require('./images/kaitlin.jpg')%>" alt="Photograph of Kaitlin Harold">
+                  <p class="pb_font-15 mt-3 mb-0">Kaitlin Harold</p>
+                  <p class="pb_font-15"><a href="mailto:kharold@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/kaitlinharold" target="_blank"><i class="fa fa-linkedin"></i></a></p>
               </div>
           </div>
           <div class="col-sm-6 col-md-3">
               <div class="pb_pricing_v1 p-5 border text-center bg-white">
                   <h4 class="mb-3">Impact<br/>Lab</h4>
-                  <img class="img-fluid rounded-circle" src="<%=require('./images/nicholas.jpg')%>" alt="Photograph of Nicholas Sligh">
-                  <p class="pb_font-15 mt-3 mb-0">Nicholas Sligh</p>
-                  <p class="pb_font-15"><a href="mailto:nick1019@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/nicholas-sligh-650594166/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                  <img class="img-fluid rounded-circle" src="<%=require('./images/chris.jpg')%>" alt="Photograph of Chris Pondoc">
+                  <p class="pb_font-15 mt-3 mb-0">Chris Pondoc</p>
+                  <p class="pb_font-15"><a href="mailto:clpondoc@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/nicholas-sligh-650594166/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
               </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Studio</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/sofia.jpg')%>" alt="Photograph of Sofia Avila">
-              <p class="pb_font-15 mt-3 mb-0">Sofia Avila</p>
-              <p class="pb_font-15"><a href="mailto:sofiaaj@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sofiaavilaj/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/alissa.jpg')%>" alt="Photograph of Alissa Vuillier">
+              <p class="pb_font-15 mt-3 mb-0">Alissa Vuillier</p>
+              <p class="pb_font-15"><a href="mailto:alissav@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>Studio</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/victoria.jpg')%>" alt="Photograph of Victoria Ibarra">
+              <p class="pb_font-15 mt-3 mb-0">Victoria Ibarra</p>
+              <p class="pb_font-15"><a href="mailto:toria@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           </div>
