New headshots / LinkedIns / EOY booklet

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
               <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
 <!--                            <p> <a href=https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021 target="_blank" id="apply-link"> 🆕 Apply for a CS+SG fellowship today!</a> </p>-->
 <!--                            <p> <a href="http://bit.ly/cssg2020" target="_blank" id="apply-link"> 🆕 Apply to join the CS+Social Good Team! </a> </p>-->
-                            <p class="mb-4"><a href="http://bit.ly/cssg_eoy" target="_blank" id="past-work">Look at Our Past Work</a></p>
+                            <p class="mb-4"><a href="https://bit.ly/38viSk7" target="_blank" id="past-work">Look at Our Past Work</a></p>
 							<p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://www.facebook.com/cs4good/" target="_blank"><i class="fa fa-facebook"></i></span></a>
@@ -321,7 +321,7 @@
               <h4 class="mb-3">AI+Social Good</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/matthewr.jpg')%>" alt="Photograph of Matthew Radovan">
               <p class="pb_font-15 mt-3 mb-0">Matthew Radovan</p>
-              <p class="pb_font-15"><a href="mailto:mradovan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shubhangd/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15"><a href="mailto:mradovan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/matthew-radovan/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
 	  <div class="col-sm-6 col-md-3">
@@ -330,14 +330,6 @@
               <img class="img-fluid rounded-circle" src="<%=require('./images/mona.jpg')%>" alt="Photograph of Mona Anvari">
               <p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
               <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3">Design &amp; Marketing</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/kelsey.png')%>" alt="Photograph of Kelsey Wang">
-              <p class="pb_font-15 mt-3 mb-0">Kelsey Wang</p>
-              <p class="pb_font-15"><a href="mailto:kelseytw@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/kelseytw/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
@@ -353,7 +345,7 @@
               <h4 class="mb-3"></br>Discussions</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/liz.jpg')%>" alt="Photograph of Liz Song">
               <p class="pb_font-15 mt-3 mb-0">Liz Song</p>
-              <p class="pb_font-15"><a href="mailto:lizsong@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/phalpha/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15"><a href="mailto:lizsong@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/liz-song-0620811b0/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
         </div>
@@ -413,9 +405,18 @@
                   <h4 class="mb-3">Impact<br/>Lab</h4>
                   <img class="img-fluid rounded-circle" src="<%=require('./images/chris.jpg')%>" alt="Photograph of Chris Pondoc">
                   <p class="pb_font-15 mt-3 mb-0">Chris Pondoc</p>
-                  <p class="pb_font-15"><a href="mailto:clpondoc@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/nicholas-sligh-650594166/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                  <p class="pb_font-15"><a href="mailto:clpondoc@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/pondoc/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
               </div>
           </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Design &amp; Marketing</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/kelsey.png')%>" alt="Photograph of Kelsey Wang">
+              <p class="pb_font-15 mt-3 mb-0">Kelsey Wang</p>
+              <p class="pb_font-15"><a href="mailto:kelseytw@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/kelseytw/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+	<div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Studio</h4>
@@ -429,7 +430,7 @@
               <h4 class="mb-3"></br>Studio</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/victoria.jpg')%>" alt="Photograph of Victoria Ibarra">
               <p class="pb_font-15 mt-3 mb-0">Victoria Ibarra</p>
-              <p class="pb_font-15"><a href="mailto:toria@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <p class="pb_font-15"><a href="mailto:toria@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/victoria-ayres-ibarra-1427b71a0/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           </div>
