updating photos for 2021-22 board

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
+  <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126093570-1"></script>
     <script>
@@ -10,16 +10,16 @@
 
       gtag('config', 'UA-126093570-1');
     </script>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>CS+Social Good</title>
-		<meta name="description" content="A student organization at Stanford dedicated to the intersection of technology and social impact.">
-		<meta name="keywords" content="CS4Good, technology, justice, social impact, CS+Social Good, computer science, society">
+    <title>CS+Social Good</title>
+    <meta name="description" content="A student organization at Stanford dedicated to the intersection of technology and social impact.">
+    <meta name="keywords" content="CS4Good, technology, justice, social impact, CS+Social Good, computer science, society">
 
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400|Work+Sans:300,400" rel="stylesheet">
-	</head>
-	<body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
+  </head>
+  <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
     <!-- loader -->
     <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
       <div class="container">
@@ -54,7 +54,7 @@
 <!--                            <p> <a href=https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021 target="_blank" id="apply-link"> 🆕 Apply for a CS+SG fellowship today!</a> </p>-->
 <!--                            <p> <a href="http://bit.ly/cssg2020" target="_blank" id="apply-link"> 🆕 Apply to join the CS+Social Good Team! </a> </p>-->
                             <p class="mb-4"><a href="https://bit.ly/38viSk7" target="_blank" id="past-work">Look at Our Past Work</a></p>
-							<p class="mb-5">
+              <p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://www.facebook.com/cs4good/" target="_blank"><i class="fa fa-facebook"></i></span></a>
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://mailman.stanford.edu/mailman/listinfo/cs-for-social-good" target="_blank"><i class="fa fa-envelope"></i></span></a>
@@ -282,14 +282,14 @@
           </div>
         </div>
         <div class="row">
-					<div class="col-sm-6 col-md-3">
-						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>President</h4>
-                            <img class="img-fluid rounded-circle" src="<%=require('./images/andy.jpg')%>" alt="Photograph of Andy Jin">
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>President</h4>
+                            <img class="img-fluid rounded-circle w-100" src="<%=require('./images/andy.jpg')%>" alt="Photograph of Andy Jin">
                             <p class="pb_font-15 mt-3 mb-0">Andy Jin</p>
                           <p class="pb_font-15"><a href="mailto:andyjin@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/andygjin/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-						</div>
-					</div>
+            </div>
+          </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Vice President</h4>
@@ -306,15 +306,15 @@
               <p class="pb_font-15"><a href="mailto:senemi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
-					<div class="col-sm-6 col-md-3">
-						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>Social Chair</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/mona.jpg')%>" alt="Photograph of Mona Anvari">
-							<p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>Social Chair</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/mona.jpg')%>" alt="Photograph of Mona Anvari">
+              <p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
                           <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
                         </div>
-					</div>
-				</div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
@@ -324,7 +324,7 @@
               <p class="pb_font-15"><a href="mailto:mradovan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/matthew-radovan/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
-	  <div class="col-sm-6 col-md-3">
+    <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/mona.jpg')%>" alt="Photograph of Mona Anvari">
@@ -416,7 +416,7 @@
               <p class="pb_font-15"><a href="mailto:kelseytw@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/kelseytw/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
-	<div class="row">
+  <div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Studio</h4>
@@ -566,5 +566,5 @@
       </div>
     </footer>
     <div id="pb_loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#1d82ff"/></svg></div>
-	</body>
+  </body>
 </html>
