--- a/src/index.html
+++ b/src/index.html
@@ -285,9 +285,13 @@
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>President</h4>
-                            <img class="img-fluid rounded-circle" src="<%=require('./images/andy.jpg')%>" alt="Photograph of Andy Jin">
-                            <p class="pb_font-15 mt-3 mb-0">Andy Jin</p>
-                          <p class="pb_font-15"><a href="mailto:andyjin@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/andygjin/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                            <img class="img-fluid rounded-circle"
+                            src="<%=require('./images/ananya.jpg')%>"
+                            alt="Photograph of Ananya Karthik">
+                            <p class="pb_font-15 mt-3 mb-0">Ananya Karthik</p>
+                          <p class="pb_font-15"><a
+                            href="mailto:ananya23@stanford.edu"><i class="fa
+                              fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ananya-karthik-668618193/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
 						</div>
 					</div>
           <div class="col-sm-6 col-md-3">
@@ -327,7 +331,7 @@
 	  <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/mona.jpg')%>" alt="Photograph of Mona Anvari">
+              <img class="img-fluid rounded-circle" src="<%=require('./images/Mona.jpg')%>" alt="Photograph of Mona Anvari">
               <p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
               <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
