--- a/src/index.html
+++ b/src/index.html
@@ -297,24 +297,30 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Vice President</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/ananya.jpg')%>" alt="Photograph of Ananya Karthik">
-              <p class="pb_font-15 mt-3 mb-0">Ananya Karthik</p>
-              <p class="pb_font-15"><a href="mailto:ananya23@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ananya-karthik-668618193/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle"
+              src="<%=require('./images/Mona.jpg')%>" alt="Photograph of Mona
+              anvari">
+              <p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
+              <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Financial Officer</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/senem.jpg')%>" alt="Photograph of Senem Isik">
-              <p class="pb_font-15 mt-3 mb-0">Senem Isik</p>
+              <img class="img-fluid rounded-circle"
+              src="<%=require('./images/senem.jpg')%>" alt="Photograph of Ashna
+              Khetan">
+              <p class="pb_font-15 mt-3 mb-0">Ashna Khetan</p>
               <p class="pb_font-15"><a href="mailto:senemi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/senem/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>Social Chair</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/Mona.jpg')%>" alt="Photograph of Mona Anvari">
-							<p class="pb_font-15 mt-3 mb-0">Mona Anvari</p>
+							<img class="img-fluid rounded-circle"
+              src="<%=require('./images/Mona.jpg')%>" alt="Photograph of Monica
+              Hicks">
+							<p class="pb_font-15 mt-3 mb-0">Monica Hicks</p>
                           <p class="pb_font-15"><a href="mailto:monaavr@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/mona-anvari-0b92aa97/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
                         </div>
 					</div>
@@ -323,8 +329,10 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/matthewr.jpg')%>" alt="Photograph of Matthew Radovan">
-              <p class="pb_font-15 mt-3 mb-0">Matthew Radovan</p>
+              <img class="img-fluid rounded-circle"
+              src="<%=require('./images/adam.jpg')%>" alt="Photograph of Adam
+              Sun">
+              <p class="pb_font-15 mt-3 mb-0">Adam Sun</p>
               <p class="pb_font-15"><a href="mailto:mradovan@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/matthew-radovan/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
@@ -347,7 +355,8 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Discussions</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/liz.jpg')%>" alt="Photograph of Liz Song">
+              <img class="img-fluid rounded-circle"
+              src="<%=require('./images/liz2.jpg')%>" alt="Photograph of Liz Song">
               <p class="pb_font-15 mt-3 mb-0">Liz Song</p>
               <p class="pb_font-15"><a href="mailto:lizsong@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/liz-song-0620811b0/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
@@ -357,17 +366,11 @@
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Fellowships</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/jessica.jpg')%>" alt="Photograph of Jessica Yu">
-              <p class="pb_font-15 mt-3 mb-0">Jessica Yu</p>
+              <img class="img-fluid rounded-circle"
+              src="<%=require('./images/jessica.jpg')%>" alt="Photograph of
+              Sherry Xie">
+              <p class="pb_font-15 mt-3 mb-0">Sherry Xie</p>
               <p class="pb_font-15"><a href="mailto:jmyu@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jessica-m-yu" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>Fellowships</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/olivia.jpg')%>" alt="Photograph of Olivia Lee">
-              <p class="pb_font-15 mt-3 mb-0">Olivia Lee</p>
-              <p class="pb_font-15"><a href="mailto:oliviayl@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/oliviaylee/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
@@ -386,21 +389,25 @@
               <p class="pb_font-15"><a href="mailto:mccain@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/r-miles-mccain-a215b1199/" target="_blank"><i class="fa fa-linkedin"></i></a></p></p>
             </div>
           </div>
-        </div>
-        <div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Education</br> Outreach</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/anna.jpg')%>" alt="Photograph of Anna Hudson">
-              <p class="pb_font-15 mt-3 mb-0">Anna Hudson</p>
+              <img class="img-fluid rounded-circle"
+              src="<%=require('./images/anna.jpg')%>" alt="Photograph of Monica
+              Hicks">
+              <p class="pb_font-15 mt-3 mb-0">Monica Hicks</p>
               <p class="pb_font-15"><a href="mailto:afhudson@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/anna-hudson-5134061a6/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-sm-6 col-md-3">
               <div class="pb_pricing_v1 p-5 border text-center bg-white">
                   <h4 class="mb-3">Impact<br/>Lab</h4>
-                  <img class="img-fluid rounded-circle" src="<%=require('./images/kaitlin.jpg')%>" alt="Photograph of Kaitlin Harold">
-                  <p class="pb_font-15 mt-3 mb-0">Kaitlin Harold</p>
+                  <img class="img-fluid rounded-circle"
+                  src="<%=require('./images/philip.jpg')%>" alt="Photograph of
+                  Philip Baillargeon">
+                  <p class="pb_font-15 mt-3 mb-0">Philip Baillargeon</p>
                   <p class="pb_font-15"><a href="mailto:kharold@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/kaitlinharold" target="_blank"><i class="fa fa-linkedin"></i></a></p>
               </div>
           </div>
@@ -420,7 +427,6 @@
               <p class="pb_font-15"><a href="mailto:frankz24@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/frankzhao01/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
-	<div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3"></br>Studio</h4>
@@ -428,15 +434,6 @@
               <p class="pb_font-15 mt-3 mb-0">Alissa Vuillier</p>
               <p class="pb_font-15"><a href="mailto:alissav@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/alissa-vuillier-b96123202/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>Studio</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/victoria.jpg')%>" alt="Photograph of Victoria Ibarra">
-              <p class="pb_font-15 mt-3 mb-0">Victoria Ibarra</p>
-              <p class="pb_font-15"><a href="mailto:toria@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/victoria-ayres-ibarra-1427b71a0/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
           </div>
         </div>
     </section>
